--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="thumb">
           <img
             src="https://images.unsplash.com/photo-1550029402-8ea9bfe19f04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="image showing project 1"
           />
         </div>
         <div class="details">
@@ -32,6 +33,7 @@
         <div class="thumb">
           <img
             src="https://images.unsplash.com/photo-1550146542-ffddecb0ff25?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="image showing project 2"
           />
         </div>
         <div class="details">
@@ -46,6 +48,7 @@
         <div class="thumb">
           <img
             src="https://images.unsplash.com/photo-1550173163-3468d31a13f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="image showing project 3"
           />
         </div>
         <div class="details">
@@ -60,6 +63,7 @@
         <div class="thumb">
           <img
             src="https://images.unsplash.com/photo-1550183337-1e6177d8dd53?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="image showing project 4"
           />
         </div>
         <div class="details">
